--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <!-- Gallery -->
   <div class="gallery" id="gallery">
     <div class="typing" id="typingText"></div>
-    <img src="Shine_theertha.png" alt="Memories" id="finalImage" />
+    <img src="shine_theertha.png" alt="Memories" id="finalImage" />
     <audio id="music" src="puthu mazha instrumental.mp3"></audio>
   </div>
 
@@ -222,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
